Finishing up the 02 lesson

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
-    "name": "10up/testing_with_wp_mock",
-    "description": "Plugin that demonstrates how to add used PHPUnit and WP_Mock for unit testing in WordPress",
+    "name": "ryanwelcher/practical-unit-testing",
+    "description": "Unit testing in WordPress using practical, real world examples",
     "authors": [
         {
             "name": "Ryan Welcher",
-            "email": "ryan.welcher@10up.com"
+            "email": "me@ryanwelcher.com"
         }
     ],
+    "require": {},
     "require-dev": {
-        "10up/wp_mock": "dev-master",
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^6.4",
+        "mockery/mockery": "^1.0"
     }
 }
